--- a/web/WEB-INF/jspf/banner.jspf
+++ b/web/WEB-INF/jspf/banner.jspf
@@ -1,16 +1,4 @@
 <%-- any content can be specified here e.g.: --%>
 <%@ page pageEncoding="UTF-8" %>
 
-<table border="2">
-    <tbody>
-        <tr>
-            <td>
-                <h2>
-                    Kevin Raúl Hernández Bucheli<br>
-                    I.U. CESMAG<br>
-                    Ing. de Sistemas<br>
-                </h2>
-            </td>
-        </tr>
-    </tbody>
-</table><br>
+<div><img src="<%= request.getContextPath()%>/images/calendar.jpg" width="100%"></div>
